# SentryBench

./: .gitignore  LICENSE  README.md  base_select_gpu.sh  pyproject.toml
configs/: demo_badnets_llama2.yaml  demo_llama2_gsm8k.yaml  example_finetune_eval.yaml  example_hf_eval.yaml  example_lm_eval.yaml  example_lora_eval.yaml
configs/finetune/: badnets_llama2_lora_sft.yaml  llama3_lora_sft.yaml
data/: gsm8k_50.jsonl  sample.jsonl
logs/Llama-2-7b-chat-hf/group1/: demo_gsm8k_report.md
runs/20260227_142856/: summary.json
runs/20260227_143215/: summary.json
runs/20260227_151832/: summary.json
runs/20260227_153251/: summary.json
runs/20260227_153412/: summary.json
runs/20260227_174951/: summary.json
scripts/Llama-2-7b-chat-hf/group1/: demo_gsm8k.sh
scripts/Llama-2-7b-chat-hf/group2/: badnets_gsm8k.sh
src/sentrybench/: __init__.py  cli.py  config.py  pipeline.py  registry.py
src/sentrybench/attacks/: __init__.py  badnets.py  badwords.py  base.py  noop.py
src/sentrybench/benchmarks/: __init__.py  base.py
src/sentrybench/defenses/: __init__.py  base.py  keyword_filter.py  noop.py
src/sentrybench/llamafactory/: _compat.py
src/sentrybench/llamafactory/data/: data_utils.py  mm_plugin.py
src/sentrybench/lm_eval/: __main__.py  evaluator.py  evaluator_utils.py
src/sentrybench/metrics/: __init__.py  asr.py  base.py  lm_eval.py  mock_asr.py  utility.py
src/sentrybench/models/: __init__.py  base.py  echo.py  hf.py
src/sentrybench/trainers/: __init__.py  base.py  llamafactory.py
src/sentrybench/utils/: io.py
(+81 files in other folders)
